Fix scrollbar padding for safari breaks other component styling

--- a/src/app/atoms/scroll/ScrollView.scss
+++ b/src/app/atoms/scroll/ScrollView.scss
@@ -1,9 +1,17 @@
+@use '../../partials/dir';
 @use '_scrollbar';
+
+@mixin paddingForSafari($padding) {
+	@media not all and (min-resolution:.001dpcm) {
+    @include dir.side(padding, 0, $padding);
+  }
+}
 
 .scrollbar {
   width: 100%;
   height: 100%;
   @include scrollbar.scroll;
+  @include paddingForSafari(var(--sp-extra-tight));
 
   &__h {
     @include scrollbar.scroll__h;
@@ -18,5 +26,6 @@
   }
   &--invisible {
     @include scrollbar.scroll--invisible;
+    @include paddingForSafari(0);
   }
 }
